--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h2 class="hero-title">Encontre tudo para sua construção!</h2>
-                    <p class="hero-subtitle">Qualidade, variedade e os melhores preços da região.</p>
-                    <a href="#" class="button primary">Ver Produtos</a>
+                    <h2 class="hero-title">Capanema PR Santo Antonio dos Siems</h2>
+                    <p class="hero-subtitle">Tudo sobre o interior de Capanema.</p>
+                    <a href="#" class="button primary">Ver Galerias de fotos</a>
                 </div>
             </div>
         </section>
 
         <section class="featured-products">
             <div class="container">
-                <h2 class="section-title">Produtos em Destaque</h2>
+                <h2 class="section-title">Lugares em destque em Destaque</h2>
                 <div class="product-grid">
                     <div class="product-card">
                         <img src="tijolo.webp" alt="Tijolo">
