--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <div class="product-grid">
                     <div class="product-card">
                         <img src="tijolo.webp" alt="Tijolo">
-                        <h3>Tijolo Comum</h3>
-                        <p class="price">R$ 1,50 / unidade</p>
+                        <h3>Igreja Nossa senhora do Sagrado coração</h3>
+                    
                         <button class="button secondary">Adicionar ao Carrinho</button>
                     </div>
                     <div class="product-card">
