--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
 
         <section class="call-to-action">
             <div class="container">
-                <h2>Precisa de ajuda com seu projeto?</h2>
-                <p>Entre em contato com nossos especialistas e receba um orçamento personalizado.</p>
-                <a href="#" class="button primary">Fale Conosco</a>
+                <h2>Quer conhecer mais um pouco de Capanema?</h2>
+                <p>Entre no nosso site personalizado para nós conhecermos um pouco mais do interior de Capanema!</p>
+                <a href="#" class="button primary">Entre Aqui</a>
             </div>
         </section>
     </main>
 
     <footer class="site-footer">
         <div class="container">
-            <p>&copy; 2025 Sua Loja de Materiais de Construção. Todos os direitos reservados.</p>
+            <p>&copy;Conhecendo um pedacinho da nossa querida cidade.</p>
         </div>
     </footer>
 
