--- a/sobrenos.html
+++ b/sobrenos.html
@@ -30,8 +30,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h2 class="hero-title">Sobre nós</h2>
-                    <p class="hero-subtitle">Bem-vindo à nossa loja de materiais de construção! Aqui, você encontra tudo o que precisa para transformar seus projetos em realidade. Seja para uma reforma, uma construção nova ou pequenos reparos, temos uma vasta variedade de produtos de alta qualidade, desde cimento, tijolos, madeiras, até ferramentas e acessórios. Nossa equipe está sempre pronta para ajudar você a escolher os melhores materiais e oferecer dicas para facilitar seu trabalho. Venha nos visitar e descubra como podemos ajudar a construir seus sonhos com confiança e segurança. Esperamos por você!
-
+                    <p class="hero-subtitle"> Conheça um pouco mais sobre nossa historia, nosso site foi criado específicamente para contar sobre Santo Antônio dos Siems e sobre nossa comunidade e como é bom saber da origem da nossa cidadezinha tao pequena mas com uma história muito importante.
 </p>
 
                 </div>
