--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h2 class="hero-title">Capanema PR Santo Antonio dos Siems</h2>
+                    <h2 class="hero-title">Capanema PR Santo Antonio dos Siemes</h2>
                     <p class="hero-subtitle">Tudo sobre o interior de Capanema.</p>
                     <a href="#" class="button primary">Ver Galerias de fotos</a>
                 </div>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="product-card">
                         <img src="areia.webp" alt="Areia">
-                        <h3>Cemitério Santo Antonio dos Siems</h3>
+                        <h3>Cemitério Santo Antonio dos Siemes</h3>
                         
                         <button class="button secondary">Mais informações</button>
                     </div>
