--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h2 class="section-title">Lugares em destque </h2>
                 <div class="product-grid">
                     <div class="product-card">
-                        <img src="tijolo.webp" alt="Tijolo">
+                        <img src="igreja.png" alt="Imagem da Igreja">
                         <h3>Igreja Nossa senhora do Sagrado coração</h3>
                     
                         <button class="button secondary">Mais informações</button>
