--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <button class="button secondary">Mais informações</button>
                     </div>
                     <div class="product-card">
-                        <img src="cimento.jpeg" alt="Cimento">
+                        <img src="comunidade.png" alt="Imagem da Comunidade">
                         <h3>Comunidade</h3>
                        
                         <button class="button secondary">Mais informações</button>
