--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <button class="button secondary">Mais informações</button>
                     </div>
                     <div class="product-card">
-                        <img src="areia.webp" alt="Areia">
+                        <img src="cemiterio.png" alt="Cemiterio">
                         <h3>Cemitério Santo Antonio dos Siemes</h3>
                         
                         <button class="button secondary">Mais informações</button>
