--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <button class="button secondary">Mais informações</button>
                     </div>
                     <div class="product-card">
-                        <img src="ferro.jpeg" alt="Ferro">
+                        <img src="comunidade.png" alt="Comunidade 2">
                         <h3>Sociedade Rainha do Jardim</h3>
                         
                         <button class="button secondary">Mais informações</button>
