--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h2 class="hero-title">Capanema PR Santo Antonio dos Siemes</h2>
+                    <h2 class="hero-title">Turismo em Capanema PR</h2>
                     <p class="hero-subtitle">Tudo sobre o interior de Capanema.</p>
                     <a href="#" class="button primary">Ver Galerias de fotos</a>
                 </div>
